# fixed-point

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: mod.rs
src/: lib.rs
